<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Auto Snooze</string>

    <string name="action_settings">Settings</string>
    <string name="action_new">New Alarm</string>
    <string name="action_test_alarm">Set Test Alarm</string>
    <string name="action_cancel_alarm">Cancel Test Alarm</string>
    <string name="action_save_alarm">Save</string>

    <string name="info_alarm_on">Alarm is on</string>
    <string name="info_alarm_off">Alarm is off</string>

    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="title_activity_new_alarm">Edit Alarm</string>
    <string name="title_notification_upcoming">Upcoming Alarm</string>
    
    <string name="hint_snooze_duration">Snooze duration</string>
    <string name="hint_snooze_quantity">Snooze quantity</string>

    <string name="error_input_required">Input required</string>
    
    <string name="pref_notifications_title">Notifications</string>
    <string name="pref_notifications_enabled">Show notifications</string>
    <string name="pref_notifications_enabled_summary">Show notifications for upcoming alarms</string>
    <string name="pref_key_notifications_enabled">pref_key_notifications_enabled</string>

    <string name="pref_notifications_interval_title">Notification interval</string>
    <string name="pref_notifications_interval_summary">Amount of time before an alarm to show a notification</string>
    <string name="pref_key_notifications_interval">pref_key_notifications_interval</string>
    
    <string name="pref_alarm_title">Alarms</string>
    <string name="pref_ringtone_title">Alarm tone</string>
    <string name="pref_ringtone_summary">Choose your ringtone</string>
    <string name="pref_key_ringtone">pref_ringtone_key</string>

    <string name="pref_vibrate">Vibration</string>
    <string name="pref_vibrate_summary_on">Vibrate on</string>
    <string name="pref_vibrate_summary_off">Vibrate off</string>
    <string name="pref_key_vibrate">pref_key_vibrate</string>

    <!--Constants used when printing the days an alarm will fire-->
    <string name="day_sun">Sun</string>
    <string name="day_sun_full">Sunday</string>

    <string name="day_mon">Mon</string>
    <string name="day_mon_full">Monday</string>

    <string name="day_tue">Tue</string>
    <string name="day_tue_full">Tuesday</string>

    <string name="day_wed">Wed</string>
    <string name="day_wed_full">Wednesday</string>

    <string name="day_thu">Thu</string>
    <string name="day_thu_full">Thursday</string>

    <string name="day_fri">Fri</string>
    <string name="day_fri_full">Friday</string>

    <string name="day_sat">Sat</string>
    <string name="day_sat_full">Saturday</string>

    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>

    <string name="alarm_msg">Wake Up!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ringtone_label">Ringtone</string>
</resources>
