<?xml version="1.0" encoding="utf-8"?>
<!--todo: default snooze duration, quantity?
    todo: ringtone toggle?
    todo: alarm volume slider-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_alarm_title">
        <RingtonePreference
            android:title="@string/pref_ringtone_title"
            android:summary="@string/pref_ringtone_summary"
            android:key="@string/pref_key_ringtone"
            android:ringtoneType="alarm"
            android:showDefault="true"
            />
        <SwitchPreference
            android:title="@string/pref_vibrate"
            android:key="@string/pref_key_vibrate"
            android:summaryOn="@string/pref_vibrate_summary_on"
            android:summaryOff="@string/pref_vibrate_summary_off"
            android:defaultValue="true"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_notifications_title">
        <CheckBoxPreference
            android:title="@string/pref_notifications_enabled"
            android:summary="@string/pref_notifications_enabled_summary"
            android:key="@string/pref_key_notifications_enabled"
            android:defaultValue="true"/>
        <lbaker.app.autosnooze.ui.preference.NotificationIntervalPreference
            android:title="@string/pref_notifications_interval_title"
            android:summary="@string/pref_notifications_interval_summary"
            android:key="@string/pref_key_notifications_interval"
            android:dependency="@string/pref_key_notifications_enabled"
            android:defaultValue="60"/>
    </PreferenceCategory>
</PreferenceScreen>